// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test NotFound component NotFound component should render correctly 1`] = `
<div>
  <div
    class="page"
  >
    <header
      class="header"
    >
      <div
        class="container"
      >
        <div
          class="header__wrapper"
        >
          <div
            class="header__left"
          >
            <a
              class="header__logo-link header__logo-link--active"
              href="/"
            >
              <img
                alt="6 cities logo"
                class="header__logo"
                height="41"
                src="img/logo.svg"
                width="81"
              />
            </a>
          </div>
          <nav
            class="header__nav"
          >
            <ul
              class="header__nav-list"
            >
              <li
                class="header__nav-item user"
              >
                <a
                  class="header__nav-link header__nav-link--profile"
                  href="/login"
                >
                  <span
                    class="header__user-name user__name"
                  >
                    Sign In
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main
      class="page__main"
    >
      <div
        class="container"
      >
        <h1
          class="not-found"
        >
          404 Not Found
        </h1>
        <a
          href="/"
        >
          Вернуться на главную
        </a>
      </div>
    </main>
  </div>
</div>
`;

exports[`Test NotFound component NotFound component should render correctly when user athorized 1`] = `
<div>
  <div
    class="page"
  >
    <header
      class="header"
    >
      <div
        class="container"
      >
        <div
          class="header__wrapper"
        >
          <div
            class="header__left"
          >
            <a
              class="header__logo-link header__logo-link--active"
              href="/"
            >
              <img
                alt="6 cities logo"
                class="header__logo"
                height="41"
                src="img/logo.svg"
                width="81"
              />
            </a>
          </div>
          <nav
            class="header__nav"
          >
            <ul
              class="header__nav-list"
            >
              <li
                class="header__nav-item user"
              >
                <a
                  class="header__nav-link header__nav-link--profile"
                  href="/favorites"
                >
                  <div
                    class="header__avatar-wrapper user__avatar-wrapper"
                  />
                  <span
                    class="header__user-name user__name"
                  >
                    mail@gmail.com
                  </span>
                </a>
              </li>
              <li
                class="header__nav-item user"
              >
                <button
                  class="header__nav-link header__nav-link--profile header__nav-link--logout"
                >
                  <span
                    class="header__user-name user__name"
                  >
                    Logout
                  </span>
                </button>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </header>
    <main
      class="page__main"
    >
      <div
        class="container"
      >
        <h1
          class="not-found"
        >
          404 Not Found
        </h1>
        <a
          href="/"
        >
          Вернуться на главную
        </a>
      </div>
    </main>
  </div>
</div>
`;
